@@ -556,7 +556,17 @@ extern "C" {
 #define RT_ANICURSOR MAKEINTRESOURCE(21)
 #define RT_ANIICON MAKEINTRESOURCE(22)
 #define RT_HTML MAKEINTRESOURCE(23)
+#ifndef RC_INVOKED
 #define RT_MANIFEST MAKEINTRESOURCE(24)
+#define CREATEPROCESS_MANIFEST_RESOURCE_ID  MAKEINTRESOURCE(1)
+#define ISOLATIONAWARE_MANIFEST_RESOURCE_ID MAKEINTRESOURCE(2)
+#define ISOLATIONAWARE_NOSTATICIMPORT_MANIFEST_RESOURCE_ID MAKEINTRESOURCE(3)
+#else
+#define RT_MANIFEST 24
+#define CREATEPROCESS_MANIFEST_RESOURCE_ID  1
+#define ISOLATIONAWARE_MANIFEST_RESOURCE_ID 2
+#define ISOLATIONAWARE_NOSTATICIMPORT_MANIFEST_RESOURCE_ID 3
+#endif
 #define EWX_FORCE 4
 #define EWX_LOGOFF 0
 #define EWX_POWEROFF 8
